crates/dbdict/tests/snapshots/validate_spec__s11_empty_table_name.snap
---
source: crates/dbdict/tests/validate_spec.rs
assertion_line: 583
---
$version: "0.1.0"
$learn_more: https://github.com/pjc-wspace/dbdict
tables:
  - name: ""
    columns:
      - name: id
        type: number(id)
        examples: [1, 2, 3]
────────────────────────────────────────
error: [S11] A table must have a non-empty name.
 --> dict.yaml:4:11
  |
4 |   - name: ""
  |           ^ table name is empty
